--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,21 +3,20 @@
     "tasks": [
         {
             "label": "task-build-debug",
-            "command": "g++",
+            "command": "gcc",
             "args": [
                 "-g",
-                "-std=c++17",
+                "-std=c17",
                 "-m64",
                 "-O0",
                 "-Wall",
-                "${workspaceFolder}/src/*.cpp",
+                "${workspaceFolder}/src/*.c",
                 "-o",
                 "${workspaceFolder}/dist/game-debug.exe",
                 "-I./src",
                 "-I./src/include",
                 "-I${workspaceFolder}/libs/raylib/include",                
                 "-static-libgcc",
-                "-static-libstdc++",
                 "-L${workspaceFolder}/libs/raylib/lib",
                 "-lraylib",
                 "-lopengl32",
@@ -37,13 +36,13 @@
         },
         {
             "label": "task-build-release",
-            "command": "g++",
+            "command": "gcc",
             "args": [
-                "-std=c++17",
+                "-std=c17",
                 "-m64",
                 "-O3",
                 "-mwindows",
-                "${workspaceFolder}/src/*.cpp",
+                "${workspaceFolder}/src/*.c",
                 "${workspaceFolder}/src/my.o",
                 "-o",
                 "${workspaceFolder}/dist/game-release.exe",
@@ -51,7 +50,6 @@
                 "-I./src/include",
                 "-I${workspaceFolder}/libs/raylib/include",    
                 "-static-libgcc",
-                "-static-libstdc++",
                 "-L${workspaceFolder}/libs/raylib/lib",
                 "-lraylib",
                 "-lopengl32",
